--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -13,10 +13,25 @@ suites:
   - name: default
     run_list:
       - recipe[dev_env::pre_process]
+      - recipe[dev_env::default]
     attributes: {
       dev_env: {
+        user: "vagrant",
         packages: [
-          { name: "xvfb" }
+          { name: "curl" },
+          { name: "git" }
+        ],
+        apps: [
+          {
+            checkout_path: "/vagrant/home/projects/sample_app",
+            git_repo: "git@github.com:railstutorial/sample_app.git",
+            revision: "master",
+            git_action: "checkout",
+            user: "vagrant",
+            post_commands: <<-EOH
+              touch run_post_commands
+            EOH
+          }
         ]
       }
     }
