--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -12,14 +12,14 @@ platforms:
 suites:
   - name: default
     run_list:
+      - recipe[git::default]
       - recipe[dev_env::pre_process]
       - recipe[dev_env::default]
     attributes: {
       dev_env: {
         user: "vagrant",
         packages: [
-          { name: "curl" },
-          { name: "git" }
+          { name: "curl" }
         ],
         apps: [
           {
